# eeg-cardio-audio-sleep

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  citations.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: build.yml  code-style.yml  pytest.yaml  style.yml
cardio_audio_sleep/: __init__.py  _config.py  _typing.py  _version.py  conftest.py  detector.py  detector_tuning.py  example.py  recollection.py  record.py  tasks.py  tasks_psychopy.py  trigger.py  viz.py
cardio_audio_sleep/audio/: __init__.py  _sound.py  assr.py  sound.py  tone.py  whitenoise.py
cardio_audio_sleep/commands/: __init__.py  _utils.py  cli.py  gui.py  gui.ui  main.py  tasks.py  testing.py
cardio_audio_sleep/commands/tests/: test_main.py  test_sys_info.py
cardio_audio_sleep/config/: __init__.py  config-recollection-dev.ini  config-recollection.ini  config-sleep-dev.ini  config-sleep-instrument-dev.ini  config-sleep-instrument.ini  config-sleep.ini  config.ini  config.py  constants.py  triggerbox-triggers.ini  triggers.ini
cardio_audio_sleep/eye_link/: EyeLink.py  EyeLinkCoreGraphicsPsychoPy.py  __init__.py  _base.py  _graphics.py  eye_link.py  mock.py  test_eyelink.py
cardio_audio_sleep/io/: __init__.py  read_raw.py  read_raw_fif.py  read_raw_xdf.py  utils.py
cardio_audio_sleep/tasks/: __init__.py  _config.py  _config_detector.py  _utils.py  asynchronous.py  baseline.py  isochronous.py  synchronous.py
cardio_audio_sleep/tasks/tests/: test_synchronous.py  test_utils.py
cardio_audio_sleep/tests/: test_record.py
cardio_audio_sleep/triggers/: __init__.py  parallel.py  serial.py  triggers.py
cardio_audio_sleep/utils/: __init__.py  _checks.py  _docs.py  _imports.py  _logs.py  async_timings.py  blocks.py  config.py  instrument.py  logs.py  lsl.py  match_positions.py  sequence.py  triggers.py  volume.py
cardio_audio_sleep/utils/tests/: test_blocks.py  test_checks.py  test_config.py  test_docs.py  test_imports.py  test_logs.py
cardio_audio_sleep/visuals/: __init__.py  _visual.py  cross.py  filling_bar.py  moving_bar.py  text.py
data/: ecg1024-raw.fif  ecg2048-raw.fif  ecg512-raw.fif  synchronous-cardiac-raw.fif
psychopy/: recollection.psyexp
script/: asynchronous.py  demo-detector.py  detection.py  detection_delays.py  isochronous.py  lsl_delays.py  multiprocessing.py  r-peak-detection-methods.py  synchronous.py  tasks.py  tasks_psychopy.py  timings.py
script/demo/: demo-detector.py  neurokit.py  sync_psychopy_sound_and_trigger.py  sync_sounddevice_and_arduino_trigger.py  sync_sounddevice_and_software_trigger.py  synchronous.py  timings.py
script/old/: synchronous.py
scripts/: timings.py
