[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'cardio_audio_sleep'
version = '0.5.0.dev'
description = 'Cardio-audio-sleep study.'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.9'
authors = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
maintainers = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
keywords = [
    'python',
    'neuroscience',
    'neuroimaging',
    'sleep',
]
classifiers = [
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
]
dependencies = [
    'bsl>=0.6.1',
    'matplotlib',
    'mne>=1.0.0',
    'numpy>=1.21',
    'packaging',
    'pandas',
    'psutil',
    'psychopy',
    'PyQt5',
    'pyxdf',
    'scipy',
    'stimuli>=0.4.1',
]

[project.optional-dependencies]
build = ['build', 'twine']
style = ['black', 'codespell', 'isort', 'pydocstyle[toml]', 'ruff']
all = [
    'cardio_audio_sleep[build]',
    'cardio_audio_sleep[style]',
]
full = ['cardio_audio_sleep[all]']

[project.urls]
homepage = 'https://github.com/fcbg-hnp-meeg/eeg-cardio-audio-sleep'
documentation = 'https://github.com/fcbg-hnp-meeg/eeg-cardio-audio-sleep'
source = 'https://github.com/fcbg-hnp-meeg/eeg-cardio-audio-sleep'
tracker = 'https://github.com/fcbg-hnp-meeg/eeg-cardio-audio-sleep/issues'

[project.scripts]
cas = 'cardio_audio_sleep.commands.main:cas'
cas-sys_info = 'cardio_audio_sleep.commands.sys_info:run'
cas_test = 'cardio_audio_sleep.commands.main:test'
pds = 'cardio_audio_sleep.commands.main:pds'

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['cardio_audio_sleep*']
exclude = ['cardio_audio_sleep*tests']

[tool.setuptools.package-data]
"cardio_audio_sleep.audio" = ["*/*.wav"]
"cardio_audio_sleep.config" = ["*.ini"]
"cardio_audio_sleep.visuals" = ["*.png"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | .github
    | .ruff_cache
    | setup.py
    | script/
    | data/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
py_version = 39
extend_skip_glob = [
    'setup.py',
    'script/*',
    'data/*',
]

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^cardio_audio_sleep.*'
add_ignore = 'D100,D104,D107'

[tool.ruff]
line-length = 88
extend-exclude = [
    "doc",
    "setup.py",
    "script/",
    "data/",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
