[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
authors = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
classifiers = [
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Topic :: Scientific/Engineering',
]
dependencies = [
  'bsl==0.6.4',
  'byte_triggers',
  'matplotlib',
  'mne>=1.6.0',
  'mne-lsl>=1.2.0',
  'numpy>=1.21',
  'packaging',
  'pandas',
  'psutil',
  'psychopy',
  'PyQt5',
  'pyxdf',
  'scipy',
  'stimuli>=0.5.0',
]
description = 'Cardio-audio-sleep study.'
keywords = [
  'neuroimaging',
  'neuroscience',
  'python',
  'sleep',
  'cardiac',
]
license = {file = 'LICENSE'}
maintainers = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
name = 'cardio_audio_sleep'
readme = 'README.md'
requires-python = '>=3.10'
version = '0.5.0.dev'

[project.optional-dependencies]
all = [
  'cardio_audio_sleep[build]',
  'cardio_audio_sleep[style]',
]
build = [
  'build',
  'twine',
]
full = ['cardio_audio_sleep[all]']
style = [
  'codespell[toml]>=2.2.4',
  'isort',
  'pydocstyle[toml]',
  'ruff>=0.1.8',
  'toml-sort',
  'yamllint',
]
test = [
  'pytest-cov',
  'pytest-timeout',
  'pytest>=8.0',
]

[project.scripts]
cas = 'cardio_audio_sleep.commands.main:cas'
cas-sys_info = 'cardio_audio_sleep.commands.sys_info:run'
cas_test = 'cardio_audio_sleep.commands.main:test'
pds = 'cardio_audio_sleep.commands.main:pds'

[project.urls]
documentation = 'https://github.com/fcbg-hnp-meeg/eeg-cardio-audio-sleep'
homepage = 'https://github.com/fcbg-hnp-meeg/eeg-cardio-audio-sleep'
source = 'https://github.com/fcbg-hnp-meeg/eeg-cardio-audio-sleep'
tracker = 'https://github.com/fcbg-hnp-meeg/eeg-cardio-audio-sleep/issues'

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words = '.codespellignore'
skip = 'build,.git,.mypy_cache,.pytest_cache'

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/conftest.py',
  '**/cardio_audio_sleep/_version.py',
  '**/cardio_audio_sleep/commands/*',
  '**/cardio_audio_sleep/eye_link/EyeLinkCoreGraphicsPsychoPy.py',
  '**/cardio_audio_sleep/utils/_fixes.py',
  '**/tests/**',
]

[tool.isort]
extend_skip_glob = [
  'data/*',
]
line_length = 88
multi_line_output = 3
profile = "black"
py_version = 310

[tool.pydocstyle]
add_ignore = 'D100,D104,D107'
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!__init__|test_|EyeLinkCoreGraphicsPsychoPy).*\.py'
match-dir = '^cardio_audio_sleep.*'

[tool.pytest.ini_options]
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
minversion = '8.0'

[tool.ruff]
extend-exclude = [
  'data',
]
line-length = 88
target-version = 'py310'

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = []
select = ['A', 'B', 'E', 'F', 'UP', 'W']

[tool.ruff.lint.per-file-ignores]
'*' = [
  'B904', # 'Within an except clause, raise exceptions with raise ... from ...'
]
'__init__.py' = ['F401']

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"cardio_audio_sleep.audio" = ["*/*.wav"]
"cardio_audio_sleep.config" = ["*.ini"]
"cardio_audio_sleep.visuals" = ["*.png"]

[tool.setuptools.packages.find]
exclude = ['cardio_audio_sleep*tests']
include = ['cardio_audio_sleep*']

[tool.tomlsort]
all = true
ignore_case = true
trailing_comma_inline_array = true
